<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_blue"
    >
    
    <!-- Title -->
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"
        android:gravity="center"
	    android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="22sp"
	    android:text="@string/title"
	/>
	
	<TextView
        style="@style/HeadLineTheme"
        android:id="@+id/show_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:textSize="18sp"
        android:text="@string/statistics"
    />
	
	<!-- Dividing Line -->
	<View
	    android:layout_width="wrap_content"
	    android:layout_height="1dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@android:color/darker_gray"/>
	
	<!-- Information Views (Measurements, UsedData) -->
	<LinearLayout
		android:layout_width="fill_parent"
	  	android:layout_height="80dip"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:gravity="center"
	  	android:orientation="horizontal">
	  	
	  	<View android:layout_height="fill_parent"
		    android:layout_width="1dp"
		    android:background="#90909090"/>  	
	    <TextView
	        android:id="@+id/measurements"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="fill_parent"
	       	android:drawableTop="@drawable/measurement"
	       	android:background="@drawable/test2"
	        android:textSize="12sp"
	        android:gravity="center"
        />
	    <View android:layout_height="fill_parent"
		    android:layout_width="1dp"
		    android:background="#90909090"/>
	    <TextView
	        android:id="@+id/usedData"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="fill_parent"
	       	android:drawableTop="@drawable/data"
	       	android:background="@drawable/test2"
	        android:textSize="12sp"
	        android:gravity="center"
        />
	   	<View android:layout_height="fill_parent"
		    android:layout_width="1dp"
		    android:background="#90909090"/>
	   	<TextView
	        android:id="@+id/period"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="fill_parent"
	       	android:drawableTop="@drawable/clock"
	       	android:background="@drawable/test2"
	        android:textSize="12sp"
	        android:gravity="center"
        />
	   	<View android:layout_height="fill_parent"
		    android:layout_width="1dp"
		    android:background="#90909090"/>	
		    
	</LinearLayout>
	
	<!-- Dividing Line -->
	<View
	    android:layout_width="wrap_content"
	    android:layout_height="1dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@android:color/darker_gray"/>
	
	<!-- Last Measurement View -->
	<ScrollView
		android:id="@+id/scrollView"
		android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
		android:paddingLeft="10dip"
	    android:paddingRight="10dip"
		android:fillViewport="true">
	   	
	   	<LinearLayout
			android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="start"
		  	android:orientation="horizontal"
		  	android:background="@drawable/test2">
		    
	   	    <View 
	   	    	android:layout_height="fill_parent"
			    android:layout_width="1dp"
			    android:background="#90909090"/> 
		    
		    <TextView
		        android:id="@+id/show_info"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_width="0dp"
	        	android:layout_weight="1"
	        	android:layout_height="fill_parent"
		   	/>
		    
		    <View
			    android:layout_width="1dp"
			    android:layout_height="match_parent"
			    android:background="#90909090" />
		    
		</LinearLayout>
	</ScrollView>

	<!-- Dividing Line -->
	<View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@android:color/darker_gray"/>
	
	<TextView
	    style="@style/HeadLineTheme"
        android:id="@+id/show_console_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/console"
    />
	
	<!-- Console View -->
	<ScrollView
	    android:id="@+id/scrollView_console"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	   	android:paddingLeft="10dip"
        android:paddingRight="10dip"
	    android:fillViewport="true"
	    android:fadeScrollbars="false">

    <TextView
        android:id="@+id/console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

	</ScrollView>
	 
	
	<!-- Buttons -->
    <LinearLayout
		android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
	  	android:orientation="horizontal">
	  	
	  	<Button
	  	    style="@style/ControlButtonTheme"
		    android:id="@+id/start_button"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableTop="@drawable/start"
	        android:text="@string/start_button" />
	  	<Button
	  	    style="@style/ControlButtonTheme"
		    android:id="@+id/reset_button"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableTop="@drawable/remove"  
	        android:text="@string/reset_button" />
	  	<Button
	  	    style="@style/ControlButtonTheme"
		    android:id="@+id/result_button"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableTop="@drawable/result"        
	        android:text="@string/result_button" />	
	</LinearLayout>

</LinearLayout>